# Generating-2D-Datasets-With-Similar-Statistical-Properties

./: README.md  catch_Tests_main.cpp  get_stat_values.cpp  main.cpp  model-YOsIkF.qmodel  read_CSV_date.cpp
Catch2_Testing_FrameWork/: CMakeLists.txt  catch_tests_picomp.cpp  catch_tests_same_stats.cpp
Catch2_Testing_FrameWork/tools/: CMakeLists.txt  same_stats.cpp  same_stats.h
Catch2_Testing_FrameWork/tools/include/: same_stats_tools.h
Catch2_Testing_FrameWork/tools/src/: distances.cpp  modify.cpp
Project/additional_files/: heart_test.txt
catch_ctest_example/: CMakeLists.txt  catch_tests_picomp.cpp
catch_ctest_example/my_lib/: CMakeLists.txt
catch_ctest_example/my_lib/include/: compute_pi.h
catch_ctest_example/my_lib/src/: visualize_results.ipynb
discrete_implementation/: get_stat_values.cpp  init.csv  interface_CSV_discrete.cpp  modify_discrete.cpp  result.csv  same_stats_discrete.cpp  visualize_discrete.ipynb
first_implementation/: Makefile  circles.csv  dino_circle.cpp  dino_circle_dosts.cpp  dots.csv  result.csv  same_stats.cpp  visualize_results.ipynb  x_shape_lines.csv
first_implementation/older implementations/: dino_circle_dosts.cpp
mylib/src/: compute_pi.cpp  result.csv
old/: drawing_file.cpp  model-YOsIkF.qmodel  read_CSV_date.cpp
old/discrete_implementation/: Makefile  discrete_distances.cpp  donut_test.txt  modify_discrete.cpp  same_stats_discrete.cpp  schleife.txt  thunder_test.txt
old/first_implementation/: Makefile  diagonal_lines.csv  interface_CSV.cpp  same_stats.cpp  star_lines.csv
old/testing_with_catch2/: CMakeLists.txt  catch_main.cpp
old/testing_with_catch2/my_lib/: CMakeLists.txt
old/testing_with_catch2/my_lib/include/: compute_pi.h
project/: CMakeLists.txt  same_stats.cpp
project/additional_files/: heart_test.txt  visualize.ipynb
project/tools/: CMakeLists.txt
project/tools/include/: same_stats_tools.h
project/tools/src/: get_stat_values.cpp  interface_CSV.cpp  modify.cpp
testing_with_catch2/: catch_tests_picomp.cpp
testing_with_catch2/my_lib/src/: compute_pi.cpp
